# loosh-inference-validator

./: .dockerignore  .env  .gitignore  CHANGELOG.md  LICENSE  README.md  RUNPOD_DEPLOYMENT.md  env.example  min_compute.yml  pyproject.toml  run-validator.sh  setup.py  stop-validator.sh  test_chain_endpoint_config.py  test_config_conversion.py  validator_auto_update.sh
PM2/: ecosystem.config.js
docker/: Dockerfile  nop.sh  prompt.sh
docs/: CUSTOM_CHAIN_ENDPOINT.md  EVALUATION_PROCESS.md  RUNPOD_DEPLOYMENT.md  VALIDATOR_QUICKSTART.md  WEIGHT_SETTING_FALLBACK_STRATEGY.md  WEIGHT_SETTING_IMPLEMENTATION_SUMMARY.md
validator/: config.py  internal_config.py  main.py  test_config.py  timing.py  validator0.py  validator_list_fetcher.py  validator_server.py
validator/challenge/: challenge_types.py  send_challenge.py
validator/challenge_api/: get_next_challenge.py  models.py  update_challenge_response.py
validator/config/: __init__.py  shared_config.py
validator/db/: operations.py  schema.py  users.py
validator/endpoints/: availability.py  challenges.py  fiber.py  get_stats.py  register.py  set_running.py
validator/evaluation/: Evaluation  Recording  evaluation.py  miner_network_reporter.py  set_weights.py  sybil_detection.py  sybil_sync.py
validator/evaluation/Evaluation/: README.md  __init__.py  consensus_engine.py  quality_scorer.py
validator/evaluation/Recording/: README.md  __init__.py  consensus_narrative_generator.py  llm_service.py  similarity_heatmap.py
validator/miner_api/: availability_worker.py  check_miner_availability.py  ipv6_fix.py
validator/network/: InferenceSynapse.py  __init__.py  axon.py  bittensor_node.py  challenge_api_auth.py  fiber_client.py  fiber_client_miner.py  fiber_server.py  run_bittensor_node.sh  test_bittensor_node.py  version.py
validator/scripts/: download_models.py  generate_challenges.py
validator/tests/: test_availability.sh  test_get_stats.sh  test_register.sh  test_set_running.sh  test_validator_endpoints.sh
validator/utils/: device.py  inference_endpoint.py  model_manager.py
