[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loosh-inference-validator"
version = "1.2.1"
authors = [
    { name = "Loosh Team", email = "team@loosh.ai" },
]
description = "A bittensor subnet validator for LLM inference evaluation"
readme = "README.md"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.112.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "structlog>=24.1.0",
    "diskcache>=5.6.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "transformers>=4.37.0",
    "sentence-transformers>=2.5.0",
    "scikit-learn>=1.4.0",
    "nltk>=3.8.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "cryptography>=43.0.0,<43.1.0",
    "redis>=5.0.0",
    "huggingface-hub>=0.20.0",
    "fiber[full] @ git+https://github.com/chutesai/fiber.git",
    # Bittensor SDK for weight setting (CRv4 support)
    # Fiber uses deprecated CRv3 via bittensor-commit-reveal, but CRv3 is removed from chain
    # SDK v10+ handles CRv4 automatically via commit_timelocked_weights_extrinsic
    "bittensor>=10.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"]
ignore = [] 

[tool.uv]
cache-dir = ".uv-cache"
link-mode = "copy"

# Override Fiber's pinned async-substrate-interface==1.1.1 to allow bittensor SDK compatibility
# Bittensor SDK v10+ requires async-substrate-interface>=1.5.15
override-dependencies = [
    "async-substrate-interface>=1.5.15",
]